force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/Directory_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Directory Audit Log</label>
    <nameField>
        <label>Directory Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directory Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>