force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Emergency-Published</fullName>
            </value>
            <value>
                <fullName>Reverted</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>