force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Directory_Audit_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>