force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Provider_Change_Request__c</referenceTo>
    <relationshipLabel>Directory Audit Logs</relationshipLabel>
    <relationshipName>Directory_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>