force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Changed__c</fullName>
    <label>Field Changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>