force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Directory Audit Logs</relationshipLabel>
    <relationshipName>Directory_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>