force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderDirectoryMaintananceAgent/objects/Directory_Audit_Log__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>